<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.HomeFragmentPartyBuildingVideo">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@null"/>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:paddingLeft="35dp"
        android:paddingRight="35dp"
        android:background="@color/part_building_video_bg">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="65dp"
            android:layout_height="23dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            android:background="@drawable/fg_pb_video_selector1"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/fg_pbv_str1"
            android:textColor="@color/fg_pb_video_selector1_color"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="65dp"
            android:layout_height="23dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="0dp"
            android:background="@drawable/fg_pb_video_selector1"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/fg_pbv_str2"
            android:textColor="@color/fg_pb_video_selector1_color"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="65dp"
            android:layout_height="23dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp"
            android:background="@drawable/fg_pb_video_selector1"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/fg_pbv_str3"
            android:textColor="@color/fg_pb_video_selector1_color"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <FrameLayout
        android:id="@+id/framelayout_pb_video"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </FrameLayout>

    <!--<android.support.design.widget.TabLayout40
        android:id="@+id/tablayout_party_building_video"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:tabMaxWidth="0dp"
        app:tabPaddingStart="10dp"
        app:tabPaddingEnd="10dp"
        app:tabIndicatorHeight="0dp"
        app:tabGravity="fill"
        app:tabMode="fixed"
        android:background="@color/part_building_video_bg">
    </android.support.design.widget.TabLayout>
-->
   <!-- <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@null"/>

    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager_party_building_video"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </android.support.v4.view.ViewPager>-->


</LinearLayout>