<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.HomeFragmentPartyBuildingLibrary">


    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.v4.widget.NestedScrollView
            android:id="@+id/scrollView_pb_library"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <com.typartybuilding.view.WrapContentHeightViewPager
                        android:id="@+id/viewpager_pb_library"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    </com.typartybuilding.view.WrapContentHeightViewPager>
                    <RadioGroup
                        android:id="@+id/radiogroup_pb_library"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingLeft="8dp"
                        android:layout_gravity="center_horizontal|bottom"
                        android:layout_marginBottom="13dp">
                    </RadioGroup>
                </FrameLayout>

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="125dp"
                    android:background="@color/part_building_library_bg">

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="100dp"
                        android:layout_height="35dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/fg_pb_library_selector1"
                        android:gravity="center"
                        android:text="@string/fg_pbl_str6"
                        android:textColor="@color/fg_pb_library_selector_color"
                        android:textSize="15sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="100dp"
                        android:layout_height="35dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/fg_pb_library_selector1"
                        android:gravity="center"

                        android:text="@string/fg_pbl_str1"
                        android:textColor="@color/fg_pb_library_selector_color"
                        android:textSize="15sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="100dp"
                        android:layout_height="35dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="15dp"
                        android:background="@drawable/fg_pb_library_selector1"
                        android:gravity="center"

                        android:text="@string/fg_pbl_str2"
                        android:textColor="@color/fg_pb_library_selector_color"
                        android:textSize="15sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="100dp"
                        android:layout_height="35dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginBottom="20dp"
                        android:background="@drawable/fg_pb_library_selector1"
                        android:gravity="center"

                        android:text="@string/fg_pbl_str3"
                        android:textColor="@color/fg_pb_library_selector_color"
                        android:textSize="15sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="100dp"
                        android:layout_height="35dp"
                        android:layout_marginBottom="20dp"
                        android:background="@drawable/fg_pb_library_selector1"
                        android:gravity="center"

                        android:text="@string/fg_pbl_str4"
                        android:textColor="@color/fg_pb_library_selector_color"
                        android:textSize="15sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="100dp"
                        android:layout_height="35dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginBottom="20dp"
                        android:background="@drawable/fg_pb_library_selector1"
                        android:gravity="center"

                        android:text="@string/fg_pbl_str5"
                        android:textColor="@color/fg_pb_library_selector_color"
                        android:textSize="15sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" />

                </android.support.constraint.ConstraintLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@null"></View>
                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="31dp"
                    android:background="@color/part_building_library_bg">

                    <ImageView
                        android:id="@+id/imageView10"
                        android:layout_width="3dp"
                        android:layout_height="13dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="12dp"
                        android:src="@drawable/fg_pb_library_shape3"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView_albumlist_headline"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"

                        android:text="精选推荐"
                        android:textColor="#ff333333"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="@+id/imageView10"
                        app:layout_constraintStart_toEndOf="@+id/imageView10"
                        app:layout_constraintTop_toTopOf="@+id/imageView10" />

                </android.support.constraint.ConstraintLayout>

                <FrameLayout
                    android:id="@+id/framelayout_pb_library"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                </FrameLayout>

              <!--  <TextView
                    android:id="@+id/textView_loadmore"
                    android:visibility="invisible"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:background="@null"
                    android:gravity="center_vertical|center_horizontal"
                    android:drawablePadding="7dp"
                    android:text="上拉加载更多"
                    android:textColor="#ffaaaaaa"
                    android:textSize="10sp" />-->
            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>

    </android.support.v4.widget.SwipeRefreshLayout>


</LinearLayout>